--- a/src/pages/components/footer/videoFooter.css
+++ b/src/pages/components/footer/videoFooter.css
@@ -1,6 +1,6 @@
 .videoFooter {
     position: relative;
-    bottom: 20%;
+    bottom: 23%;
     color: white;
     margin: 30px;
 }
@@ -18,7 +18,7 @@
 }
 
 .videoFooterMusic__text {
-    width: 80%;
+    width: 81%;
     overflow-x: hidden;
 }
 
@@ -30,7 +30,7 @@
     animation: spinTheRecord 3s infinite linear;
     position: absolute;
     bottom: 5px;
-    right: 20px;
+    right: 5px;
     height: 50px;
     filter: invert(1);
 }
@@ -52,3 +52,13 @@
         transform: translateX(-100%);
     }
 }
+
+@media only screen and (max-width: 440px) {
+    .videoFooter {
+        bottom: 24%;
+    }
+
+    .videoFooterMusic__text{
+        width: 70%;
+    }
+   }
