--- a/src/pages/components/sidebar/videoSidebar.css
+++ b/src/pages/components/sidebar/videoSidebar.css
@@ -8,3 +8,9 @@
 .videoSidebar__options {
     padding: 20px;
 }
+
+@media only screen and (max-width: 440px) {
+    .videoSidebar{
+        top: 46%;
+    }
+   }
